# Analise-financeira-B3

./: .env.example  .gitignore  .implementation-plan-1-5.md  .pre-commit-config.yaml  .sourcery.yaml  CLI_CONTRACT.md  CONVENTION.md  README.md  cache.json  foo.json  main.py  pyproject.toml  readme.md  snap1.csv  snap2.csv  tmp_test_typer.py  untitled:plan-melhoriasStory17.prompt.md
.codacy/: codacy.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.sisyphus/: boulder.json
codeql-custom-queries-python/: codeql-pack.yml  example.ql
dados/: BBDC4.csv  ECOR3.csv  ITUB3.csv  PETR4.csv  VALE3.csv  WIZS3.csv  data.db  snapshot_cache.json
docs/: diagrama-dataflow.md  documentation-index.md  metadata_contract.md  metadata_schema.json  metrics.md  phase-2-report.md  plan-ciAcceptanceJob.prompt.md  plan-pragmaConcurrencyTests.prompt.md  plan-snapshotTestsVerifyScript.prompt.md  pr_checklist.md  project-context.md  project-scan-report.json  quickstart-ci.md  release-checklist.md  schema.json  schema.md  schema.yaml  validation-layering.md
examples/: checksums_example.py  returns_consumer.py  run_quickstart_example.sh
metadata/: ingest_logs.example.jsonl  ingest_logs.json  ingest_logs.jsonl
migrations/: 0000_init_schema.sql  0001_create_returns.sql  0002_expand_snapshots.sql  0003_add_date_check.sql  0004_add_idx_prices_ticker_date.sql
outputs/: bmad_code_review_run.json  quickstart_20260319T011110Z.out
reports/: junit.xml
scripts/: apply_migrations.py  ci_validate_checksums.py  cleanup_snapshots.py  generate_ci_snapshot.py  init_ingest_db.py  install-hooks.sh  pull_sample.py  register_dummy.py  run_save_raw_example.py  sync_issues_gh.sh  test_adapter_mapper.py  test_mapper.py  test_retry_backoff.py  validate_metadata.py  validate_snapshots.py  verify_snapshot.py
snapshots/: PETR4_snapshot.csv  PETR4_snapshot.csv.checksum  PETR4_snapshot_test.csv  PETR4_snapshot_test.csv.checksum  checksums.json
snapshots_test/: PETR4_snapshot.csv  PETR4_snapshot.csv.checksum
src/: cli_compat.py  cli_feedback.py  cli_options.py  connectivity.py  dados_b3.py  db.py  db_client.py  db_migrator.py  health.py  ingest_cli.py  locks.py  logging_config.py  main.py  metrics.py  paths.py  pipeline.py  retention.py  retorno.py  snapshot_cli.py  tickers.py  time_utils.py  utils.py  validation.py  validation_schema.py
tests/: __init__.py  conftest.py  fixture_utils.py  test_adapter_factory.py  test_adapter_log_validation.py  test_adapters.py  test_adapters_test_conn.py  test_cache_utils.py  test_checksums.py  test_ci_validate_checksums.py  test_cli.py  test_cli_health_metrics.py  test_cli_schema.py  test_cli_streamlit.py  test_cli_test_conn.py  test_concurrency_sqlite.py  test_connectivity.py  test_dados_b3_adapter.py  test_mapper.py  (+51 more)
(+348 files in other folders)
