[tool.poetry]
name = "analise-financeira-b3"
version = "0.1.0"
description = "coleta de dados B3"
authors = ["phbrgnomo <phbrcc@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.2"
pandas = "^2.3.2"
pandas-datareader = "^0.10.0"
sqlalchemy = "^2.0.18"
typer = "^0.9.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "src.main:app"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^24.9.0"
ruff = "^0.14.0"
pre-commit = "^3.3.0"
