[tool.poetry]
name = "analise-financeira-b3"
version = "0.1.0"
description = "coleta de dados B3"
authors = ["phbrgnomo <phbrcc@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.2"
pandas = "^2.3.2"
pandas-datareader = "^0.10.0"
sqlalchemy = "^2.0.18"
typer = "^0.9.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "src.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.10.0"
ruff = "^0.14.14"
pre-commit = "^3.3.0"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C", "B", "I"]
lint.ignore = ["E203"]
