[tool.poetry]
name = "analise-financeira-b3"
version = "0.1.0"
description = "coleta de dados B3"
authors = ["phbrgnomo <phbrcc@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.2"
pandas = "^2.3.2"
sqlalchemy = "^2.0.18"
typer = "^0.24"
python-dotenv = "^1.0.0"
yfinance = "^1.2.0"
pandera = "^0.29.0"
portalocker = "^3.1.0"
sqlparse = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "src.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-rerunfailures = "^16.0"
ruff = "^0.14.14"
pre-commit = "^3.3.0"
jsonschema = "^4.19.0"
# Hypothesis 7.x series doesn’t exist on PyPI; latest 6.x is 6.151.9
hypothesis = "^6.151.9"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "flaky: mark test as expected to be intermittently failing (uses pytest-rerunfailures)",
]
filterwarnings = [
    "ignore::DeprecationWarning:typer.*",
    "ignore:The '__version__' attribute is deprecated:DeprecationWarning:click.*",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C", "B", "I"]
lint.ignore = ["E203"]
exclude = ["docs/examples/notebooks/*", "*.md"]
